--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "TankRumbleGame.sln"
+    "dotnet.defaultSolution": "Tank-Rumble-v2.sln"
 }
